--- a/results.qmd
+++ b/results.qmd
@@ -39,9 +39,6 @@ SP500 = read_excel("data/PerformanceGraphExport.xls", skip=6)%>%
   mutate(time = ymd(Effective_date))%>%
   filter(time >= ymd('2020-01-01') & time < ymd('2023-06-01'))%>%
   mutate(group = format(Effective_date, format = "%b %Y"))
-```
-
-```{r}
 overallURtrend = UR %>%
   filter(adjusted==TRUE, sex=="Both", race=="All", age=="All", mari=="All") %>%
   mutate(value = as.numeric(value))%>%
@@ -57,9 +54,7 @@ overallSP500trend = SP500 %>%
   mutate(time = my(group))%>%
   ungroup()%>%
   select(time, "S&P 500 index")
-```
 
-```{r}
 trend_df <- overallURtrend %>%
   left_join(overallCOVIDtrend, by = "time") %>%
   left_join(overallSP500trend, by = "time") %>%
@@ -172,9 +167,7 @@ COVIDtrend = COVID %>%
     TRUE ~ subgroup1
   ))%>%
   rename("COVID Death Rate (per 100,000 population)"=crude_rate)
-```
 
-```{r}
 trend_df <- URtrend %>%
   left_join(COVIDtrend, by = c("time", "subgroup1")) %>%
   select(time, subgroup1, "Unemployment Rate (%)", "COVID Death Rate (per 100,000 population)")
@@ -191,9 +184,7 @@ trend_df <- trend_df %>%
     subgroup1 == "Black" ~ "race",
     subgroup1 == "White" ~ "race",
   ))
-```
 
-```{r}
 ggplot(trend_df, aes(time, value)) +
   geom_line() + geom_point(size = 2) +
   scale_x_date(limits = c(as.Date("2020-01-01"), as.Date("2023-06-30")), date_breaks = "6 months", date_labels = "%b %Y") +
@@ -257,17 +248,15 @@ ggplot(URtrend, aes(time, value)) +
 
 Figure 6 shows that regardless of gender or marital status, the unemployment rate sharply increased during the first wave of the pandemic and gradually declined to stabilize after this initial peak. Overall, married individuals experienced relatively less impact on their employment status during the first wave of the pandemic, with lower unemployment rates across the pandemic period. In terms of gender, married women had higher unemployment rates compared to men, while the opposite pattern was observed for the other two marital statuses. Moreover, in all three marital statuses, women suffer more from the negative impact of the first wave of the pandemic than men do.
 
-## Which racial group has the most serious unemployment issue during the peak of the national unemployment rate (Apr 2020) vs April 2023 given age and sex?
+## Which racial group has the most serious unemployment issue during the peak of the national unemployment rate (Apr 2020) vs April 2023 given age and sex?`
 
-```{r}
+```{r, fig.width=30, fig.height=20}
 URtrend = UR %>%
   filter(adjusted==FALSE, sex!="Both", mari=="All", race!="All", age!="All", age!="16-19", time== ymd('2020-04-01')) %>%
   mutate(value = as.numeric(value))%>%
   select(value, sex, race, age) %>%
   rename(UR = value)
-```
 
-```{r, fig.width=30, fig.height=20}
 theme_heat <- theme_classic() +
   theme(axis.line = element_blank(),
         axis.ticks = element_blank())
@@ -323,7 +312,7 @@ Overall, there has been an increase in the disparity of unemployment rates acros
 
 ## Which state faced the most severe unemployment issue during the peak of the national unemployment rate (April 2020) and how does it compare to the state's COVID deaths severity at the same time?
 
-```{r}
+```{r, fig.width=18, fig.height=15}
 state_UR = read_csv("data/state_UR.csv", show_col_types = FALSE) %>%
   mutate(time = ym(paste(year, month, sep = "-"))) %>%
   filter(time == ymd('2020-04-01')) %>%
@@ -331,9 +320,7 @@ state_UR = read_csv("data/state_UR.csv", show_col_types = FALSE) %>%
   mutate(state = tolower(state))%>%
   filter(state!="district of columbia", state!="puerto rico")%>%
   rename(region=state)
-```
 
-```{r}
 state_COVID = read_csv('data/Provisional_COVID-19_Deaths_by_Sex_and_Age.csv',show_col_types = FALSE) %>%
   filter(Group=="By Month", State!="United States", State!="District of Columbia", State!="Puerto Rico", State!="New York City", Sex=="All Sexes", `Age Group`=="All Ages")%>%
   mutate(time = mdy(`Start Date`)) %>%
@@ -341,25 +328,19 @@ state_COVID = read_csv('data/Provisional_COVID-19_Deaths_by_Sex_and_Age.csv',sho
   mutate(State = tolower(State))%>%
   select(State, 'COVID-19 Deaths')%>%
   rename(region = State, value='COVID-19 Deaths')
-```
 
-```{r}
 popu = read_excel("data/PopulationReport.xlsx") %>% 
   select(Name, `Pop. 2020`) %>%
   rename(region=Name, population=`Pop. 2020`)%>%
   filter(region!="United States", region!="Puerto Rico", region!="District of Columbia")%>%
   mutate(region = tolower(region))
 popu = popu %>% slice(1:(n() - 1))
-```
 
-```{r}
 state_DR = state_COVID %>%
   left_join(popu, by = "region") %>%
   mutate(value = (value/population)*100000)%>%
   select(region, value)
-```
 
-```{r, fig.width=18, fig.height=15}
 state_choropleth(state_UR,
                  title = "Figure 9 unemployment severity by state (April 2020)",legend = "Unemployment Rate (%)") +
 theme(plot.title = element_text(size = 30))+
@@ -367,6 +348,8 @@ theme(legend.text = element_text(size = 20))+
 theme(legend.title = element_text(size = 20)) + 
 theme(legend.key.size = unit(1, "cm"))
 ```
+
+From Figure 9, we can observe that in April 2020, the states of Nevada, Illinois, Michigan, Indiana, Hawaii, and Rhode Island had the most severe unemployment issues. Overall, the unemployment situation on the East and West coasts appeared to be more severe compared to the central inland regions.
 
 ```{r, fig.width=18, fig.height=15}
 state_choropleth(state_DR,
@@ -377,13 +360,11 @@ theme(legend.title = element_text(size = 20)) +
 theme(legend.key.size = unit(1, "cm"))
 ```
 
-From Figure 9, we can observe that in April 2020, the states of Nevada, Illinois, Michigan, Indiana, Hawaii, and Rhode Island had the most severe unemployment issues. Overall, the unemployment situation on the East and West coasts appeared to be more severe compared to the central inland regions.
-
 When compared to Figure 10, it becomes evident that the majority of states with the most severe unemployment situations also exhibit a relatively severe COVID deaths severity. Hawaii is an exception in this regard, as it experiences significant unemployment, but its COVID deaths severity is quite mild. This aligns with our intuition, as Hawaii heavily relies on the tourism industry. With the global border closures due to the pandemic, the tourism sector has suffered a severe blow, leading to a high unemployment rate in Hawaii. However, this situation is not directly related to the local severity of the pandemic but rather connected to global border policies adopted by various countries.
 
 ## Which state faced the most severe pandemic-related death issue during the peak of the national COVID death rate (January 2021) and how does it compare to the state's unemployment severity at the same time?
 
-```{r}
+```{r, fig.width=18, fig.height=15}
 state_COVID = read_csv('data/Provisional_COVID-19_Deaths_by_Sex_and_Age.csv',show_col_types = FALSE) %>%
   filter(Group=="By Month", State!="United States", State!="District of Columbia", State!="Puerto Rico", State!="New York City", Sex=="All Sexes", `Age Group`=="All Ages")%>%
   mutate(time = mdy(`Start Date`)) %>%
@@ -391,25 +372,19 @@ state_COVID = read_csv('data/Provisional_COVID-19_Deaths_by_Sex_and_Age.csv',sho
   mutate(State = tolower(State))%>%
   select(State, 'COVID-19 Deaths')%>%
   rename(region = State, value='COVID-19 Deaths')
-```
 
-```{r}
 popu = read_excel("data/PopulationReport.xlsx") %>% 
   select(Name, `Pop. 2020`) %>%
   rename(region=Name, population=`Pop. 2020`)%>%
   filter(region!="United States", region!="Puerto Rico", region!="District of Columbia")%>%
   mutate(region = tolower(region))
 popu = popu %>% slice(1:(n() - 1))
-```
 
-```{r}
 state_DR = state_COVID %>%
   left_join(popu, by = "region") %>%
   mutate(value = (value/population)*100000)%>%
   select(region, value)
-```
 
-```{r}
 state_UR = read_csv("data/state_UR.csv", show_col_types = FALSE) %>%
   mutate(time = ym(paste(year, month, sep = "-"))) %>%
   filter(time == ymd('2021-01-01')) %>%
@@ -417,9 +392,7 @@ state_UR = read_csv("data/state_UR.csv", show_col_types = FALSE) %>%
   mutate(state = tolower(state))%>%
   filter(state!="district of columbia", state!="puerto rico")%>%
   rename(region=state)
-```
 
-```{r, fig.width=18, fig.height=15}
 state_choropleth(state_DR,
                  title = "Figure 11 COVID deaths severity by state (January 2021)",legend = "COVID Death Rate (per 100,000)") +
 theme(plot.title = element_text(size = 30))+
@@ -427,6 +400,8 @@ theme(legend.text = element_text(size = 20))+
 theme(legend.title = element_text(size = 20)) + 
 theme(legend.key.size = unit(1, "cm"))
 ```
+
+From Figure 11, we can observe that in January 2021, the states of Arizona, California, Oklahoma, Alabama, Mississippi, Tennessee, and South Carolina had the most severe COVID-19 situation in terms of deaths. Overall, the COVID-19 death situation in the southern states appeared to be more severe compared to the northern regions.
 
 ```{r, fig.width=18, fig.height=15}
 state_choropleth(state_UR,
@@ -436,7 +411,5 @@ theme(legend.text = element_text(size = 20))+
 theme(legend.title = element_text(size = 20)) + 
 theme(legend.key.size = unit(1, "cm"))
 ```
-
-From Figure 11, we can observe that in January 2021, the states of Arizona, California, Oklahoma, Alabama, Mississippi, Tennessee, and South Carolina had the most severe COVID-19 situation in terms of deaths. Overall, the COVID-19 death situation in the southern states appeared to be more severe compared to the northern regions.
 
 When compared to Figure 12, we can observe that in those Southeastern states where the COVID-19 pandemic is more severe, the unemployment situation is relatively less severe. Conversely, in states like Washington and Oregon, where the pandemic is less severe, the unemployment situation appears to be notably more severe.
